--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bamburgh-react-admin-dashboard-material-ui-pro",
   "version": "1.0.0",
   "title": "Bamburgh React Admin Dashboard with Material-UI PRO",
-  "homepage": "https://demo.uifort.com/bamburgh-react-admin-dashboard-material-ui-pro",
+  "homepage": ".",
   "description": "Premium admin template powered by the most popular UI components framework available for React: Material-UI. Features hundreds of examples making web development fast and easy. Start from one of the individual apps included or from the general dashboard and build beautiful scalable applications and presentation websites.",
   "author": {
     "name": "UiFort.com",
@@ -35,6 +35,7 @@
     "google-map-react": "1.1.7",
     "hamburgers": "1.1.3",
     "html-to-draftjs": "1.5.0",
+    "http-server": "^0.12.3",
     "immutability-helper": "3.0.2",
     "leaflet": "1.6.0",
     "react": "16.13.1",
