--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "react-dom": "16.13.1",
     "react-draft-wysiwyg": "1.14.5",
     "react-dropzone": "11.0.1",
+    "react-facebook-login": "^4.1.1",
     "react-flag-kit": "0.3.1",
     "react-gauge-chart": "0.2.5",
+    "react-google-login": "^5.2.2",
     "react-ionicons": "3.1.4",
     "react-joyride": "2.2.1",
     "react-leaflet": "2.6.1",
