--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-sparklines": "1.7.0",
     "react-spinners": "0.8.3",
     "react-text-mask": "5.4.3",
+    "react-toastify": "^7.0.3",
     "react-trend": "1.2.5",
     "redux": "4.0.5",
     "yup": "0.28.5"
