--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-to-draftjs": "1.5.0",
     "http-server": "^0.12.3",
     "immutability-helper": "3.0.2",
+    "jquery": "^3.6.0",
     "leaflet": "1.6.0",
     "react": "16.13.1",
     "react-apexcharts": "1.3.7",
