--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@material-ui/icons": "4.5.1",
     "@material-ui/lab": "4.0.0-alpha.53",
     "@material-ui/pickers": "3.2.10",
+    "@types/react-stripe-elements": "^6.0.4",
+    "@types/stripe": "^8.0.417",
     "apexcharts": "3.19.0",
     "axios": "^0.21.1",
     "chart.js": "2.9.3",
@@ -71,6 +73,7 @@
     "react-slick": "0.26.0",
     "react-sparklines": "1.7.0",
     "react-spinners": "0.8.3",
+    "react-stripe-elements": "^6.1.2",
     "react-text-mask": "5.4.3",
     "react-toastify": "^7.0.3",
     "react-trend": "1.2.5",
