--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/icons": "4.5.1",
     "@material-ui/lab": "4.0.0-alpha.53",
     "@material-ui/pickers": "3.2.10",
+    "@stripe/stripe-js": "^1.13.2",
     "apexcharts": "3.19.0",
     "axios": "^0.21.1",
     "chart.js": "2.9.3",
@@ -68,6 +69,8 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^4.3.0",
+    "react-select-country-list": "^2.2.3",
     "react-slick": "0.26.0",
     "react-sparklines": "1.7.0",
     "react-spinners": "0.8.3",
