--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-apexcharts": "1.3.7",
     "react-big-calendar": "0.24.6",
     "react-block-ui": "1.3.3",
+    "react-calendar": "^3.3.1",
     "react-chartjs-2": "2.9.0",
     "react-circular-progressbar": "2.0.3",
     "react-color": "2.18.1",
