--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "immutability-helper": "3.0.2",
     "jquery": "^3.6.0",
     "leaflet": "1.6.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-apexcharts": "1.3.7",
     "react-big-calendar": "0.24.6",
