--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-copy-to-clipboard": "5.0.2",
     "react-countup": "4.3.3",
     "react-cropper": "1.3.0",
+    "react-datepicker": "^3.8.0",
     "react-dnd": "10.0.2",
     "react-dnd-html5-backend": "10.0.2",
     "react-dom": "16.13.1",
@@ -77,6 +78,7 @@
     "react-sparklines": "1.7.0",
     "react-spinners": "0.8.3",
     "react-text-mask": "5.4.3",
+    "react-time-range": "^1.0.4",
     "react-toastify": "^7.0.3",
     "react-trend": "1.2.5",
     "redux": "4.0.5",
