--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-joyride": "2.2.1",
     "react-leaflet": "2.6.1",
     "react-perfect-scrollbar": "1.5.8",
+    "react-phone-number-input": "^3.1.19",
     "react-quill": "1.3.5",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
