confirm alert show

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-chartjs-2": "2.9.0",
     "react-circular-progressbar": "2.0.3",
     "react-color": "2.18.1",
+    "react-confirm-alert": "^2.7.0",
     "react-contextmenu": "2.13.0",
     "react-copy-to-clipboard": "5.0.2",
     "react-countup": "4.3.3",
