--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-flag-kit": "0.3.1",
     "react-gauge-chart": "0.2.5",
     "react-google-login": "^5.2.2",
+    "react-image-lightbox": "^5.1.1",
     "react-ionicons": "3.1.4",
     "react-joyride": "2.2.1",
     "react-leaflet": "2.6.1",
