--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-ionicons": "3.1.4",
     "react-joyride": "2.2.1",
     "react-leaflet": "2.6.1",
+    "react-pdf": "^5.3.0",
     "react-perfect-scrollbar": "1.5.8",
     "react-phone-number-input": "^3.1.19",
     "react-quill": "1.3.5",
